# F2Dock

./: CMakeCache.txt  CMakeLists.lonestar  CMakeLists.txt  INSTALL  Makefile  README  build.sh  cmake_install.cmake  deg08.matrix  deg10.matrix  deg12.matrix  deg15.mtx  deg20.matrix  paths.ini
CMake/: BundleUtilities.cmake  FindLapack.cmake  FindLog4cplus.cmake  FindPETSc.cmake  GetPrerequisites.cmake  SetupCGAL.cmake  SetupGSL.cmake
CMake/.svn/: all-wcprops  dir-prop-base  entries
doc/.svn/: all-wcprops  entries
doc/dependencies/: dependencies.ppt
doc/params/: params.bib  params.tex
inc/.svn/: all-wcprops  dir-prop-base  entries
inc/F2DockServer/: dockingJobParams.h  jobHandler.h
inc/GB-rerank/: GB-rerank.h
inc/PG-range/: 1D-IntegerRange.h  BinarySearchTree.h  PG.h  ball.h  cell.h  line.h
inc/XmlRPC/: XmlRpcSocket.h  XmlRpcUtil.h  base64.h
inc/f2dock/: Docking.h  ElementInformation.h  TopValues.h  ValuePosition3D.h  mpiModule.h
inc/fast-GB/: fastBornRadius.h  fastGpol.h
inc/fast-LJ/: fastLJ.h
inc/fast-PQ/: PairingHeap.h
inc/fast-clash/: clashFilter.h
inc/fast-hydro/: pseudoGsol.h
inc/fft-utils/: fastfft.h  rank-fftw.h  sparsefft3-timers.h  sparsefft3.h
inc/libmol/: atom.h  benergy.h  bond.h  compare.h  gbsa.h  hbond.h  icharmm.h  intcrds.h  io.h  libmol.h  minimize.h  myhelpers.h  nbenergy.h  newgetline.h  octree.h  pdb.h  phys.h  potential.h  quaternions.h  shield.h  tvector.h  version.h  xyz.h
inc/math/: Gaussian.h  Matrix.h  Quaternion.h  Ray.h
inc/misc-ident/: miscIdent.h
inc/vol/: RAWIV.h
lib/.svn/: all-wcprops  entries
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/.svn/: all-wcprops  dir-prop-base  entries
src/F2DockServer/: F2DockServer.cpp  Makefile  cmake_install.cmake
src/GB-rerank/: CMakeLists.txt  GB-rerank.cpp  Makefile  cmake_install.cmake
src/GB-rerank/.svn/: all-wcprops  entries
src/GB-rerank/.svn/text-base/: pairingHeap.cpp.svn-base
src/PG-range/: 1D-IntegerRange.cpp.old  BinarySearchTree.cpp.old  CMakeLists.txt  Makefile  PG.cc  TestPG.cpp.old  cmake_install.cmake  cuckoo.cc
src/PG-range/.svn/: all-wcprops  entries
src/PG-range/.svn/text-base/: PG.cc.svn-base  ddriver.cpp.old.svn-base
src/PostFiltering/: CMakeLists.txt  FilterOutput.cpp  Makefile  cmake_install.cmake
src/PostFiltering/.svn/: all-wcprops  entries
src/XmlRPC/: Makefile  XmlRpcDispatch.cpp  XmlRpcServerConnection.cpp  XmlRpcUtil.cpp  XmlRpcValue.cpp  cmake_install.cmake
src/f2dock/: .F2Dock.cpp.swp  CMakeLists.lonestar  CMakeLists.txt  Docking.cpp  F2Dock.cpp  Makefile  ValuePosition3D.cpp  cmake_install.cmake  mpiModule.cpp
src/f2dock/.svn/: all-wcprops  entries
src/f2dock/.svn/text-base/: Docking.cpp.svn-base  F2Dock.cpp.svn-base  TopValues.cpp.svn-base
src/fast-GB/: CMakeLists.txt  Makefile  cmake_install.cmake  fastBornRadius.cpp  fastDispE.cpp
src/fast-LJ/: LJTest.cpp  Makefile  cmake_install.cmake
src/fast-PQ/: Makefile  PairingHeap.cpp  cmake_install.cmake
src/fast-clash/: Makefile  clashFilter.cpp  cmake_install.cmake
src/fast-hydro/: CMakeLists.txt  Makefile  cmake_install.cmake  dynArray.h  kern.cu  kern_v2.cu  pseudoGsol.cpp  pseudoGsol_cuda.h  testPseudoGsol.cpp
src/fast-resCont/: CMakeLists.txt  Makefile  cmake_install.cmake
src/fast-resCont/.svn/: all-wcprops  entries
src/fast-resCont/.svn/text-base/: resContFilter.cpp.svn-base
src/fft-utils/: CMakeLists.txt  Makefile  cmake_install.cmake  fastfft.cpp  sparsefft3-plan.cpp
src/fft-utils/.svn/: all-wcprops  entries
src/fft-utils/.svn/text-base/: rank-fftw.cpp.svn-base  sparsefft3.cpp.svn-base
src/hbondFilter/: CMakeLists.txt  hbondFilter.cpp
src/hbondFilter/.svn/: all-wcprops  entries
src/hbondFilter/.svn/text-base/: testHbondFilter.cpp.svn-base
src/libmol/: energy.cpp  gbsa.cpp  (+16 more)
tests/: 1A2K.inp  1A2K_L_U.f2d  1A2K_L_U.pqr.rawn  1A2K_L_U.quad  1A2K_R_U.pqr  1A2K_R_U.pqr.rawn  1A2K_R_U_1.7.f2d  1A2K_apereira.inp  1A2K_out.txt  1A2K_rmsd_backbone_unbound_10.0.txt  1ACB.inp  1ACB_L_U.f2d  1ACB_L_U.pqr.rawn  1ACB_L_U.quad  1ACB_R_U.pqr  1ACB_R_U.pqr.rawn  1ACB_R_U_1.7.f2d  1ACB_out.txt  1ACB_rmsd_backbone_unbound_10.0.txt  1AHW.inp  1AHW_L_U.f2d  1AHW_L_U.pqr.rawn  1AHW_L_U.quad  1AHW_R_U.pqr.rawn  1AHW_R_U_1.7.f2d  1AHW_rmsd_backbone_unbound_10.0.txt  1JZD.inp  1JZD_L_U.f2d  1JZD_L_U.pqr  1JZD_L_U.pqr.rawn  1JZD_L_U.quad  1JZD_R_U.pqr.rawn  1JZD_R_U_1.7.f2d  1JZD_rmsd_backbone_unbound_10.0.txt
(+188 files in other folders)
