CMAKE_MINIMUM_REQUIRED (VERSION 2.6)


FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB INCLUDE_FILES ../../inc/fGB-rerank/*.[Hh])

SOURCE_GROUP("Source Files" FILES ${SOURCE_FILES})
SOURCE_GROUP("Header Files" FILES ${HEADER_FILES})

INCLUDE_DIRECTORIES(
  ../../inc
)

SET(GBRERANK_LINK_LIBS 
  fast-GB 
  PG-range
  utils
  c
  m
  pthread
)


ADD_EXECUTABLE (GB-Rerank ${SOURCE_FILES} ${INCLUDE_FILES})


TARGET_LINK_LIBRARIES(GB-Rerank ${GBRERANK_LINK_LIBS})
