CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

FILE(GLOB SOURCE_FILES *.cpp *.cc)
FILE(GLOB INCLUDE_FILES ../../inc/PG-range/*.[Hh])

SOURCE_GROUP("Source Files" FILES ${SOURCE_FILES})
SOURCE_GROUP("Header Files" FILES ${HEADER_FILES})

INCLUDE_DIRECTORIES(
  ../../inc/PG-range
)

ADD_LIBRARY (PG-range STATIC ${SOURCE_FILES} ${INCLUDE_FILES})
